3D map array. Tristate. Attempt to make signal effecient. Got threads working for insane speed. Made BreadBaord item and Gate their own .java file.